last bug squashed?

--- a/client/index.less
+++ b/client/index.less
@@ -13,6 +13,7 @@ body {
 #calculator {
   width: 283px;
   background-color: black;
+  margin-top: -35px;
 }
 #display {
   background-color: black;
@@ -36,11 +37,11 @@ body {
   width: 100%;
 }
 .calcbutton {
-  background-color: rgba(227, 227, 227, 0.99);
+  background-color: rgba(227, 227, 227, 1.00);
   text-align: center;
   width: 70px;
   min-height: 70px;
-  font-size: 20px;
+  font-size: 22px;
   padding: 0;
   margin: -1px -3px;
   display: inline-block;
@@ -50,14 +51,14 @@ body {
   padding: -20px 0;
 }
 #calcplusminusbuttontext {
-  margin-top: 14px;
+  margin-top: 16px;
   vertical-align: middle;
 }
 #calcbuttonslash {
   font-size: 26px;
 }
 #calcdividebutton {
-  margin-top: 12px;
+  margin-top: 14px;
   margin-bottom: -16px;
   font-size: 28px;
 }
@@ -73,18 +74,18 @@ body {
   margin-left: 30px;
 }
 .orangebutton {
-  background-color: rgba(218, 146, 50, 0.99);
+  background-color: rgba(218, 146, 50, 1.00);
   color: white;
 }
 #lastrowbox {
   margin: -3px;
 }
 .orangebuttonhit {
-  background-color: rgba(218, 146, 50, 0.9);
+  background-color: rgba(218, 146, 50, 0.5);
   color: gray;
   padding: -1px;
   margin: -3px;
 }
 .graybuttonhit {
-  background-color: rgba(227, 227, 227, 0.9);
+  background-color: rgba(227, 227, 227, 0.5);
 }
